# kafka-rust-test

kafka-docker/: docker-compose-single-broker.yml  docker-compose.yml  run.sh
rust-kafka/: Cargo.toml  README.md
rust-kafka/src/: common.rs  consume.rs  data.rs  encode.rs  main.rs  produce.rs
