[package]
name = "rust-kafka"
version = "0.1.0"
authors = ["Brock Smedley <brock@firstfoundry.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.8"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"